deep-read batch 3: sequence_store/register_stuffer wording fixes

--- a/src/components/sequence_store/gen/doc/sequence_store_generator.tex
+++ b/src/components/sequence_store/gen/doc/sequence_store_generator.tex
@@ -9,13 +9,13 @@
 
 \section{Description}
 
-The purpose of this generator is to provide a user friendly way of defining the memory slots for the sequence store component. The generator takes a YAML model file as input which specifies the location and size of each memory slot. Each memory slot is intended to hold a single sequence. 
+The purpose of this generator is to provide a user-friendly way of defining the memory slots for the sequence store component. The generator takes a YAML model file as input which specifies the location and size of each memory slot. Each memory slot is intended to hold a single sequence. 
 
 Note the example shown in this documentation is used in the unit test of this component so that the reader of this document can see it being used in context. Please refer to the unit test code for more details on how this generator can be used.
 
 \section{Schema}
 
-The following pykwalify schema is used to validate the input YAML model. The schema is commented to show what each of the available YAML keys are and what they accomplish. Even without knowing the specifics of pykwalify schemas, you should be able to gleam some knowledge from the file below.
+The following pykwalify schema is used to validate the input YAML model. The schema is commented to show what each of the available YAML keys are and what they accomplish. Even without knowing the specifics of pykwalify schemas, you should be able to glean some knowledge from the file below.
 
 \yamlcodef{../schemas/sequence_store.yaml}
 
